ajustes do behaviour